--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
-                    android:text="Artiste"
+                    android:text="Artistes"
                     android:backgroundTint="#4CAF50" />
 
                 <Button
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
-                    android:text="Album"
+                    android:text="Albums"
                     android:backgroundTint="#4CAF50" />
             </LinearLayout>
 
