--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -39,7 +39,8 @@
                     android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
                     android:text="Titres Likés"
-                    android:backgroundTint="#4CAF50" />
+                    android:textColor="@color/white"
+                    android:background="@color/green" />
 
                 <Button
                     android:id="@+id/artists_button"
@@ -48,7 +49,8 @@
                     android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
                     android:text="Artistes"
-                    android:backgroundTint="#4CAF50" />
+                    android:textColor="@color/white"
+                    android:background="@color/green" />
 
                 <Button
                     android:id="@+id/albums_button"
@@ -57,7 +59,8 @@
                     android:layout_marginEnd="4dp"
                     android:layout_marginStart="4dp"
                     android:text="Albums"
-                    android:backgroundTint="#4CAF50" />
+                    android:textColor="@color/white"
+                    android:background="@color/green" />
             </LinearLayout>
 
             <SearchView
@@ -65,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:queryHint="Rechercher un artiste"
+                android:queryHint="Rechercher"
                 android:iconifiedByDefault="false"
                 android:background="#BBFFFFFF" />
 
